Update to support Goodix fingerprint reader

--- a/libfprint/meson.build
+++ b/libfprint/meson.build
@@ -139,6 +139,10 @@ driver_sources = {
         [ 'drivers/synaptics/synaptics.c', 'drivers/synaptics/bmkt_message.c' ],
     'goodixmoc' :
         [ 'drivers/goodixmoc/goodix.c', 'drivers/goodixmoc/goodix_proto.c' ],
+    'goodixtls511' :
+        [ 'drivers/goodixtls/goodix511.c' ],
+    'goodixtls55x4' :
+        [ 'drivers/goodixtls/goodix55x4.c' ],
 }
 
 helper_sources = {
@@ -148,6 +152,8 @@ helper_sources = {
         [ 'drivers/aesx660.c' ],
     'aes3k' :
         [ 'drivers/aes3k.c' ],
+    'goodixtls' :
+        [ 'drivers/goodixtls/goodix_proto.c', 'drivers/goodixtls/goodix.c', 'drivers/goodixtls/goodixtls.c' ],
     'nss' :
         [ ],
     'udev' :
